syntax = "proto3";
package presales_monitor;
option csharp_namespace = "PresalesMonitor.Shared";
import "custom_types.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

service Presales {
	rpc GetOverview(OverviewRequest) returns (Overview);
	rpc GetNames(google.protobuf.Empty) returns (NamesResponse);
	rpc GetKpi(KpiRequest) returns (KpiResponse);
	rpc GetImage(ImageRequest) returns (ImageResponse);
	rpc GetMonthProfitOverview(OverviewRequest) returns (MonthProfitOverview);
	rpc GetSalesOverview(google.protobuf.Empty) returns (SalesOverview);
}

message SalesOverview {
	custom_types.DecimalValue profit = 1;
	custom_types.DecimalValue plan_small = 2;
	custom_types.DecimalValue plan_full = 3;
	repeated Manager top = 4;
}
message Manager {
	string name = 1;
	custom_types.DecimalValue profit = 2;
}
message MonthProfitOverview {
	repeated Presale presales = 1;
	custom_types.DecimalValue profit = 2;
	custom_types.DecimalValue plan = 3;
	custom_types.DecimalValue left = 4;
	custom_types.DecimalValue delta_day = 5;
}
message ImageRequest {
	string keyword = 1;
	ImageOrientation orientation = 2;
}
message ImageResponse {
	string raw = 1;
	string full = 2;
	string regular = 3;
	string small = 4;
	string thumb = 5;
	string small_s3 = 6;
	string alt_description = 7;
	string author_name = 8;
	string author_url = 9;
	string source_name = 10;
	string source_url = 11;
}
message KpiRequest{
	string presale_name = 1;
	Period period = 2;
}
message KpiResponse {
	oneof response {
		Kpi kpi = 1;
		Error error = 2;
	}
}
message Kpi {
	repeated Invoice invoices = 1; 
}
message Error {
	string message = 1;
}
message Invoice {
	string counterpart = 1;
	string number = 2;
	google.protobuf.Timestamp date = 3;
	custom_types.DecimalValue amount = 4;
	custom_types.DecimalValue cost = 5;
	custom_types.DecimalValue sales_amount = 6;
	double percent = 7;
	custom_types.DecimalValue profit = 8;
	repeated Project projects_found = 9;
	repeated Project projects_ignored = 10;
	repeated Action actions_tallied = 11;
	repeated Action actions_ignored = 12;
}
message NamesResponse {
	repeated string names = 1;
}
message Period {
	google.protobuf.Timestamp from = 1;
	google.protobuf.Timestamp to = 2;
}
message OverviewRequest {
	Period period = 1;
	Department department = 2;
	Position position = 3;
	bool only_active = 4;
}
message Overview {
	repeated Presale presales = 1;
	Statistic statistics = 2;
	google.protobuf.Duration avg_director_time_to_reaction = 3;
	repeated Project escalations = 4;
	repeated Project forgotten = 5;
	repeated Project new = 6;
}
message Presale {
	string name = 1;
	Statistic statistics = 2;
	int32 deficit_projects = 3;
	custom_types.DecimalValue deficit_potential = 4;
	Department department = 5;
	Position position = 6;
	bool is_active = 7;
}
message Statistic {
	int32 in_work = 1;
	int32 assign = 2;
	int32 won = 3;
	int32 loss = 4;
	int32 abnd = 5;
	double conversion = 6;
	google.protobuf.Duration avg_time_to_win = 7;
	google.protobuf.Duration avg_time_to_reaction = 8;
	double avg_rank = 9;
	google.protobuf.Duration avg_spend = 10;
	google.protobuf.Duration sum_spend = 11;
	custom_types.DecimalValue profit = 12;
}
message Project {
	string number = 1;
	string name = 2;
	google.protobuf.Timestamp approval_by_tech_director_at = 3;
	google.protobuf.Timestamp approval_by_sales_director_at = 4;
	google.protobuf.Timestamp presale_start_at = 5;
	string presale_name = 6;
	int32 status = 7;
}
message Action {
	string project_number = 1;
	int32 number = 2;
	google.protobuf.Timestamp date = 3;
	int32 type = 4;
	google.protobuf.Duration timespend = 5;
	string description = 6;
}
enum Department {
	DEPARTMENT_NONE = 0;
	DEPARTMENT_INTERNATIONAL = 1;
	DEPARTMENT_RUSSIAN = 2;
	DEPARTMENT_ANY = 3;
}
enum Position {
	POSITION_NONE = 0;
	POSITION_ENGINEER = 1;
	POSITION_ACCOUNT = 2;
	POSITION_DIRECTOR = 3;
	POSITION_ANY = 4;
}
enum ImageOrientation {
	IMAGEORIENTATION_LANDSCAPE = 0;
	IMAGEORIENTATION_PORTRAIT = 1;
	IMAGEORIENTATION_SQUARISH = 2;
}